styles/stylesheet.css
/*
Primary blue: #03a3df
Secondary blue: #1b447f
secondary gold: #ecb722
secondary gray: #444444
*/

* {
  font-family: Arial, sans-serif;
  box-sizing: border-box;
}
header {
  padding: 2em;
  padding-bottom: 1em;
  background-color: #03a3df;
  background-size: auto;
  border-bottom: 1em solid #1b447f;
}
nav {
  text-align: right;
  color: #FFFFFF;
}
nav > div > p > a {
  color: #FFFFFF;
  font-weight: bold;
}
.portal {
  background-color: #1b447f;
  border: 1em solid #1b447f;
  border-radius: 2em;
  text-align: right;
  color: #ffffff;
  font-weight: bold;
}
.portal:hover {
  background-color: #444444;
  border: 1em solid #444444;
  border-radius: 2em;
}
.header-grid {
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: auto auto;
}
.header1 {
  grid-column: 1;
  grid-row: 1/span2;
  align-self: start;
}
.header2 {
  grid-column: 2;
  grid-row: 1;
  text-align: right;
}
.header3 {
  grid-column: 2;
  grid-row: 2;
  text-align: right;
}
li {
  list-style: none;
  padding-top: 1em;
  padding-bottom: .5em;
  padding-left: 1em;
  padding-right: 1em;
  margin-left: -1em;
  margin-right: 1em;
}
.services-grid {
  display: grid;
  grid-template-columns:7fr 3fr;
  grid-template-rows: auto auto;
  margin-top: .5em;
  margin-bottom: .5em;
  grid-gap: .5em;
  justify-content: center;
}
.aside {
  grid-column-start: 2;
  grid-row-start: 1;
  grid-row-end: 2;
}
article {
  margin-left: 0em;
  padding: 1em;
}
.white {
  color: #ffffff;
}
.services{
  grid-column: 1;
  grid-row: 1/span 2;
  background-color: #1b447f;
  border: .5em solid #ecb722;
}
.lessons {
  grid-column: 1;
  grid-row: 2;
  background-color: #FFFFFF;
}
.container {
  display: flex;
  margin-right: 1em;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}
.box {
  margin: 1em;
  padding-left: 2em;
  padding-right: 2em;
  width: 90%;
  border: 3px #ecb722 solid;
  border-radius: 2em;
  background-color: #ffffff;
  color: #444444;
}
footer {
  clear: both;
  padding: 1em;
  background-image: url("https://raw.githubusercontent.com/UWFront-End-Cert/html100/master/lesson07-styleguide/styleguide%20design%20elements/footerImage.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: auto;
  color: #ffffff;
}
.footer-grid {
  clear: both;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr;
}
.footer1 {
  grid-column: 1;
  grid-row: 1;
}
.footer2 {
  grid-column: 2;
  grid-row: 1;
  align-items: center;
}
.footer3 {
  grid-column: 3;
  grid-row: 1;
}

footer > div > p {
  text-align: center;
  font-weight: bold;
}
h2 {
  color: #1b447f;
}
aside {
  margin-top: 0em;
}
aside > h2 {
  text-align: center;
}
.info {
  padding: 1em;
  border-left: .5em solid #444444;
  border-right: .5em solid #444444;
  border-top: .5em solid #444444;
  background-color: #ecb722;
  font-weight: bold;
  text-align: center;
}
.info > p > a {
  margin-top: 2em;
  font-size: .75em;
  color: #ffffff;
  background-color: #1b447f;
  border: 0.5em solid #1b447f;
  border-radius: 2em;
  padding-left: 0em;
  padding-right: 0em;
}
.info > p > a:hover {
  background-color: #444444;
  border: .5em solid #444444;
  border-radius: 2em;
  padding-left: 0em;
  padding-right: 0em;
}
.upcoming {
  padding: 1em;
  padding-top: 0.5em;
  border-left: .5em solid #444444;
  border-right: .5em solid #444444;
  font-weight: bold;
  background-color: #ffffff;
}
.announcements {
  background-color: #444444;
  color: #ffffff;
  padding: 1em;
  padding-top: 0em;
  margin-bottom: .5em;
  height: 20em;
  overflow: auto;
}
.announcements > h2 {
  color: #FFFFFF;
}
h1 {
  color: #ecb722;
  text-align: center;
  border-bottom: .25em solid #ecb722;
  font-weight: bold;

}
.about-grid{
  display: grid;
  grid-template-columns:7fr 3fr;
  grid-template-rows: auto auto;
  margin-top: .5em;
  grid-gap: .5em;
  margin-bottom: 0.5em;
  justify-content: center;

}
.aside-about{
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  background-color: #444444;
}
.company {
    grid-column: 1;
    grid-row: 1;
    background-color: #1b447f;
    border: .5em solid #ecb722;
  }
.scroll {
  height: 25em;
  overflow: auto;
}
.staff-row {
  grid-column: 1;
  grid-row: 2;
}
.container-staff {
  display: flex;
  flex-direction: row;
  width: 100%;
  flex-wrap: nowrap;
  justify-content: space-around;
}
.staff {
width: 31%;
background-color: #03a3df;
color: #ffffff;
padding: 1em;
padding-left: 1.5em;
}
ul.schedule>li:nth-child(even) {
  background-color: #444444;
  color: #ffffff;
  padding-left: 1em;
  width: 90%;
  font-size: 17px;
}
ul.schedule>li:nth-child(odd) {
  color: #444444;
  padding-left: 1em;
  border: 1px #444444 solid;
  width: 90%;
  font-size: 17px;
}
h4 {
text-align: center;
border-bottom: .5em solid #444444;
padding-bottom: .5em;
font-size: 1.5em;
}
h3 {
  border-bottom: .5em solid #444444;
}

